--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <!-- <link rel="icon" href="/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website Template</title>
+    <script type="module" crossorigin src="/basic-website-template/assets/index.b67d9ce8.js"></script>
+    <link rel="modulepreload" href="/basic-website-template/assets/vendor.7950c4a4.js">
+    <link rel="stylesheet" href="/basic-website-template/assets/index.fdb7de74.css">
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    
   </body>
 </html>
